--- a/Nonna/Pages/Home.razor
+++ b/Nonna/Pages/Home.razor
@@ -13,9 +13,9 @@ else
     <MudGrid>
         @foreach (var index in recipeIndex.Index)
         {
-            <MudItem xs="3">
+            <MudItem xs="12" sm="6" md="3">
                 <MudCard>
-                    <MudCardMedia Image="@($"recipes/{index.Path}/{index.Image}")" Height="200" />
+                    <MudCardMedia Image="@($"recipes/{index.Path}/{index.Image}")"/>
                     <MudCardContent>
                         <MudText Typo="Typo.h5">@index.Title</MudText>
                         <MudText Typo="Typo.body2">@index.Description</MudText>
