--- a/Nonna/Pages/Home.razor
+++ b/Nonna/Pages/Home.razor
@@ -42,6 +42,6 @@ else
 
     private void NavigateToRecipe(string recipe)
     {
-        NavigationManager.NavigateTo("/" + recipe);
+        NavigationManager.NavigateTo("/Nonna/" + recipe);
     }
 }
