--- a/Nonna/Pages/Home.razor
+++ b/Nonna/Pages/Home.razor
@@ -3,8 +3,7 @@
 @inject HttpClient Http
 @inject NavigationManager NavigationManager
 
-
-<PageTitle>Home</PageTitle>
+<PageTitle>Nonna</PageTitle>
 
 @if (recipeIndex == null)
 {
