--- a/Nonna/Pages/Home.razor
+++ b/Nonna/Pages/Home.razor
@@ -9,7 +9,7 @@
     <MudText Typo="Typo.h3" Align="Align.Center" GutterBottom="true">Nonna</MudText>
     <MudText Align="Align.Center">Recept från farmor</MudText>
 
-    <MudContainer MaxWidth="MaxWidth.Small" Style="width: 300px">
+    <MudContainer MaxWidth="MaxWidth.Small">
         <MudTextField ValueChanged="@FilterRecipeList" Immediate="true" Variant="Variant.Text" T="string" Label="Filtrera"></MudTextField>
     </MudContainer>
 </MudContainer>
@@ -29,7 +29,7 @@ else if (filteredList.Any())
                     <MudItem>
                         <MudCard @onclick="@(() => NavigateToRecipe(index.Path))" Elevation="25" Class="rounded-lg">
                             <MudCardMedia Image="@($"recipes/{index.Path}/{index.Image}")" />
-                            <MudCardContent Style="width: 200px; height:125px;" Class="d-flex flex-column justify-space-around pa-3">
+                            <MudCardContent Style="width: 250px; height:125px;" Class="d-flex flex-column justify-space-around pa-3">
                                 <MudText>@index.Title</MudText>
                                 <MudText>@index.Description</MudText>
                             </MudCardContent>
