Styling and fonts

--- a/Nonna/Layout/MainLayout.razor
+++ b/Nonna/Layout/MainLayout.razor
@@ -2,8 +2,8 @@
 @inherits LayoutComponentBase
 
 @* Required *@
-@* <MudThemeProvider Theme="@NonnaThemes.PrimaryTheme" IsDarkMode="true" /> *@
-<MudThemeProvider />
+<MudThemeProvider Theme="@NonnaThemes.PrimaryTheme"/>
+@* <MudThemeProvider /> *@
 <MudPopoverProvider />
 
 @* Needed for dialogs *@
