--- a/Nonna/Pages/Home.razor
+++ b/Nonna/Pages/Home.razor
@@ -95,7 +95,7 @@ else
 
     private void NavigateToRecipe(string recipe)
     {
-        // NavigationManager.NavigateTo("/" + recipe);
+        // NavigationManager.NavigateTo("/" + recipe); // For local dev use
         NavigationManager.NavigateTo("/Nonna/" + recipe);
     }
 }
